# Budget-Bites

./: .env  .gitignore  README.md  pyproject.toml
backend/: .env.local  app.py  pyproject.toml  webscraper.py
backend/src/database/: crud.py  modle.py  router.py
backend/src/globals/: environment.py
backend/src/spoonacular/: model.py  rest.py  router.py
backend/webscraper/: webscraper.py
frontend/meals-for-less/: package-lock.json  package.json
frontend/subframe-nextjs-starter-kit/: package-lock.json  package.json
frontend/subframe-nextjs-starter-kit/.subframe/: sync.json
frontend/subframe-nextjs-starter-kit/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/subframe-nextjs-starter-kit/src/app/[recipeName]/: layout.tsx  page.tsx
frontend/subframe-nextjs-starter-kit/src/subframe/: tailwind.config.js
frontend/subframe-nextjs-starter-kit/src/subframe/components/: Accordion.tsx  Badge.tsx  Button.tsx  DropdownMenu.tsx  FilterChip.tsx  IconButton.tsx  IconWithBackground.tsx  ListingCard.tsx  Table.tsx  TopbarWithCenterSearch.tsx
frontend/subframe-nextjs-starter-kit/src/subframe/layouts/: DefaultPageLayout.tsx
